# trading-execution-engine

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/: matching_engine.cpp  matching_engine.hpp  order_book..cpp  order_book.hpp  risk_checks.hpp  risks_check.cpp  trade_execution.cpp  trade_execution.hpp
src/market_data/: market_data_interface.cpp  market_data_interface.hpp  yahoo_data.py
src/networking/: websocket_server.cpp  websocket_server.hpp
